fix scss import

--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -9,7 +9,7 @@
 @import "./component/CardList/Card/Card";
 @import "./component/CardList/NewCard/NewCard";
 @import "./routes/Home/Home";
-@import "Font";
+@import "font";
 // Some best-practice CSS that's useful for most apps
 // Just remove them if they're not what you want
 html {
