--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -4,6 +4,7 @@
 @import "./component/TopMenu/TopMenu";
 @import "./component/SideMenu/SideMenu";
 @import "./component/CardList/CardList";
+@import "./component/NewCardList/NewCardList";
 @import "./component/Tag/Tag";
 @import "./component/User/User";
 @import "./component/CardList/Card/Card";
