--- a/src/styles/component/CardList/Card/_Card.scss
+++ b/src/styles/component/CardList/Card/_Card.scss
@@ -5,6 +5,7 @@
   background-color: white;
   border-radius: 5px;
   padding: 20px;
+  cursor: pointer;
   &__tags{
     display: inline-flex;
     justify-content: flex-start;
@@ -12,7 +13,7 @@
     width: 80%;
     flex-direction: row;
   }
-  &__user{
+  &__users{
     position: absolute;
     top: 10px;
     right: 10px;
