--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -10,3 +10,7 @@ $topmenu-text: #7a7a7a;
 $user-bg: #d3d3d3;
 $card-text: #9c9c9e;
 $card-content: #6e6e6e;
+$card-modal-title: #616161;
+$card-modal-line-height: 30px;
+$card-modal-status-font-size: 12px;
+$card-modal-task-line-height: 22px;
