--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -9,6 +9,7 @@
 @import "./component/User/User";
 @import "./component/CardList/Card/Card";
 @import "./component/CardList/NewCard/NewCard";
+@import "./component/Modal/CardModal/CardModal";
 @import "./routes/Home/Home";
 @import "font";
 // Some best-practice CSS that's useful for most apps
