--- a/src/styles/_font.scss
+++ b/src/styles/_font.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,700');
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
 .material-icons {
