--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -14,3 +14,8 @@ $card-modal-title: #616161;
 $card-modal-line-height: 30px;
 $card-modal-status-font-size: 12px;
 $card-modal-task-line-height: 22px;
+$user-box-size: 26px;
+$card-modal-comment-time : #bcbcbc;
+$base-margin: 20px;
+$card-modal-comment-button: #a09f9f;
+$card-modal-comment-button-bg: #d3d3d3;
