--- a/src/styles/component/Modal/CardModal/_CardModal.scss
+++ b/src/styles/component/Modal/CardModal/_CardModal.scss
@@ -106,6 +106,7 @@
     border-bottom: 1px solid rgba(97, 97, 97, 0.18);
   }
   &__activity{
+    margin-bottom: 20px;
    h3{
      margin: 20px 0 15px 0;
      color: $card-modal-title;
@@ -128,14 +129,75 @@
          background-color: lighten($card-modal-title, 50%);
        }
      }
+     &__bottom{
+       display: flex;
+       justify-content: space-between;
+       align-items: center;
+       button{
+         border: none;
+         box-shadow: none;
+         font-size: $card-modal-status-font-size;
+         color: $card-modal-comment-button;
+         font-weight: 700;
+         height: 26px;
+         width: 64px;
+         &:hover{
+           background-color: $card-modal-comment-button-bg;
+         }
+         text-transform: uppercase;
+       }
+     }
      .user{
        margin: 10px 0;
-       width: 26px;
-       height: 26px;
+       width: $user-box-size;
+       height: $user-box-size;
        &:not(:last-child){
          margin-right: 5px;
        }
      }
    }
+  }
+  &__comments{
+    .comment{
+      position: relative;
+      &__content{
+        font-size: $small-font-size;
+        color: $card-modal-title;
+        font-weight: 400;
+        line-height: $card-modal-task-line-height;
+      }
+      margin-bottom: 40px;
+    }
+    time{
+      font-size: $card-modal-status-font-size;
+      color: $card-modal-comment-time;
+      font-weight: 500;
+      position: absolute;
+      right: 0;
+    }
+    .user__vertical{
+      .user{
+        width: 1.5* $user-box-size;
+        height: 1.5* $user-box-size;
+        span{
+          font-size: $small-font-size;
+        }
+      }
+      .user-detail{
+        margin-left: 10px;
+        margin-bottom: 0.5*$base-margin;
+        p{
+          margin: 0;
+          &:first-child{
+            font-size: $small-font-size;
+            font-weight: 700;
+          }
+          &:last-child{
+            font-size: $card-modal-status-font-size;
+            color: $card-modal-title;
+          }
+        }
+      }
+    }
   }
 }
