--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -10,6 +10,7 @@
 @import "./component/CardList/Card/Card";
 @import "./component/CardList/NewCard/NewCard";
 @import "./component/Modal/CardModal/CardModal";
+@import "./component/Modal/NewCardModal/NewCardModal";
 @import "./routes/Home/Home";
 @import "font";
 // Some best-practice CSS that's useful for most apps
