--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -11,6 +11,7 @@
 @import "./component/CardList/NewCard/NewCard";
 @import "./component/Modal/CardModal/CardModal";
 @import "./component/Modal/NewCardModal/NewCardModal";
+@import "./component/Popover/AddMemberPopover/AddMemberPopover";
 @import "./routes/Home/Home";
 @import "font";
 // Some best-practice CSS that's useful for most apps
