--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -19,3 +19,4 @@ $card-modal-comment-time : #bcbcbc;
 $base-margin: 20px;
 $card-modal-comment-button: #a09f9f;
 $card-modal-comment-button-bg: #d3d3d3;
+$heavy-font-weight: 700;
