--- a/src/styles/component/CardList/_CardList.scss
+++ b/src/styles/component/CardList/_CardList.scss
@@ -21,6 +21,7 @@
       border-radius: 10px;
       font-size: $small-font-size;
       font-weight: 500;
+      padding: 0 0.25*$base-margin;
     }
     &__right{
       font-size: $normal-font-size;
