--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -20,3 +20,4 @@ $base-margin: 20px;
 $card-modal-comment-button: #a09f9f;
 $card-modal-comment-button-bg: #d3d3d3;
 $heavy-font-weight: 700;
+$border-radius: 5px;
