--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -13,6 +13,7 @@
 @import "./component/Modal/NewCardModal/NewCardModal";
 @import "./component/Popover/AddMemberPopover/AddMemberPopover";
 @import "./routes/Home/Home";
+@import "./routes/Login/Login";
 @import "font";
 // Some best-practice CSS that's useful for most apps
 // Just remove them if they're not what you want
