--- a/src/styles/routes/Login/_Login.scss
+++ b/src/styles/routes/Login/_Login.scss
@@ -5,6 +5,14 @@
   justify-content: center;
   align-items: center;
   background-color: $topmenu-bg;
+  &__status{
+    &__fail{
+      color: red;
+    }
+    &__success{
+      color: green;
+    }
+  }
   &__signup-forgot{
     text-align: center;
     a{
@@ -19,7 +27,7 @@
     }
   }
   &__modal{
-    width: 30%;
+    width: 400px; // todo: add guideline
     padding: 2*$base-margin;
     background-color: white;
     border-radius: $border-radius;
@@ -57,8 +65,10 @@
       font-weight: 700;
       padding: 0.5*$base-margin $base-margin;
       width: 30%;
+      opacity: 0.5;
+      transition: opacity 0.2s ease-in-out;
       &:hover{
-        background-color: lighten($card-modal-comment-button-bg, 2);
+        opacity: 1;
       }
       text-transform: uppercase;
     }
