add HOC + logout

--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -14,6 +14,7 @@
 @import "./component/Popover/AddMemberPopover/AddMemberPopover";
 @import "./routes/Home/Home";
 @import "./routes/Login/Login";
+@import "./routes/SignUp/SignUp";
 @import "font";
 // Some best-practice CSS that's useful for most apps
 // Just remove them if they're not what you want
