--- a/src/styles/component/SideMenu/_SideMenu.scss
+++ b/src/styles/component/SideMenu/_SideMenu.scss
@@ -1,47 +1,46 @@
-/* Position and sizing of burger button */
-.bm-burger-button {
-  position: fixed;
-  width: 20px;
-  height: 20px;
-  left: 10px;
-  top: 18px;
-}
-
-/* Color/shape of burger icon bars */
-.bm-burger-bars {
-  background: $topmenu-text;
-}
-
-/* Position and sizing of clickable cross button */
-.bm-cross-button {
-  height: 24px;
-  width: 24px;
-}
-
-/* Color/shape of close button cross */
-.bm-cross {
-  background: #bdc3c7;
-}
-
-/* General sidebar styles */
-.bm-menu {
-  background: #373a47;
-  padding: 2.5em 1.5em 0;
-  font-size: 1.15em;
-}
-
-/* Morph shape necessary with bubble or elastic */
-.bm-morph-shape {
-  fill: #373a47;
-}
-
-/* Wrapper for item list */
-.bm-item-list {
-  color: #b8b7ad;
-  padding: 0.8em;
-}
-
-/* Styling of overlay */
-.bm-overlay {
-  background: rgba(0, 0, 0, 0.3);
+.side-menu{
+  min-width: 220px;
+  background-color: $sidebar-bg;
+  &__user{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0.5*$base-margin;
+    i{
+      font-size: $normal-font-size;
+      align-self: center;
+    }
+    .user-detail{
+      p{
+        &:last-child{
+          display: none;
+        }
+      }
+    }
+  }
+  &__links{
+    display: flex;
+    flex-direction: column;
+    a{
+      text-decoration: none;
+      padding: 0.5*$base-margin;
+      font-size: $small-font-size;
+      display: flex;
+      align-items: baseline;
+      color: $card-text;
+      font-weight: $heavy-font-weight;
+      &.active{
+        background-color: darken($sidebar-bg, 5);
+      }
+      i{
+        font-size: $large-font-size;
+        align-self: center;
+        padding: 0.25*$base-margin;
+      }
+      span{
+        padding: 0.25*$base-margin;
+        padding-left: 0;
+      }
+    }
+  }
 }
