--- a/src/styles/routes/ProjectDetail/_ProjectDetail.scss
+++ b/src/styles/routes/ProjectDetail/_ProjectDetail.scss
@@ -3,9 +3,15 @@
   justify-content: space-between;
   overflow-x: scroll;
 }
-.page-home{
+.project-detail{
+  flex: 1;
   background-color: $mainpage-bg;
   .container-fluid{
     padding-right: 0;
   }
+}
+
+.main-container{
+  display: flex;
+  flex-direction: row;
 }
