--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -18,6 +18,7 @@
 @import "./routes/Login/Login";
 @import "./routes/SignUp/SignUp";
 @import "./routes/Projects/Projects";
+@import "./routes/Team/Team";
 @import "font";
 // Some best-practice CSS that's useful for most apps
 // Just remove them if they're not what you want
