--- a/src/styles/routes/ProjectDetail/_ProjectDetail.scss
+++ b/src/styles/routes/ProjectDetail/_ProjectDetail.scss
@@ -2,6 +2,21 @@
   display: flex;
   justify-content: space-between;
   overflow-x: scroll;
+  &__horizontal{
+    flex-direction: column;
+    width: calc(100vw - 250px);
+    .card-wrap{
+      width: 100%;
+      border-bottom: 1px solid rgba(97, 97, 97, 0.18);
+      padding: $base-margin 0;
+    }
+    .card-list__header{
+      border-bottom: 1px solid rgba(97, 97, 97, 0.18);
+      &__name, &__counter{
+        flex-grow: 0.1;
+      }
+    }
+  }
 }
 .project-detail{
   flex: 1;
@@ -14,4 +29,21 @@
 .main-container{
   display: flex;
   flex-direction: row;
+}
+
+.list-mode{
+  width: calc(100vw - 250px);
+  margin-top: 30px;
+  display: flex;
+  justify-content: flex-end;
+  padding: 0 10px;
+  i{
+    padding: 0.25*$base-margin;
+    color: $card-text;
+    margin-left: 0.25*$base-margin;
+    &.active{
+      background-color: #ccc;
+    }
+    cursor: pointer;
+  }
 }
