--- a/src/styles/component/CardList/Card/_Card.scss
+++ b/src/styles/component/CardList/Card/_Card.scss
@@ -1,22 +1,69 @@
 .card{
   position: relative;
-  width: 280px;
-  margin-bottom: 20px;
-  background-color: white;
-  border-radius: 5px;
-  padding: 20px;
   cursor: pointer;
+  &.vertical{
+    width: 280px;
+    margin-bottom: 20px;
+    background-color: white;
+    border-radius: 5px;
+    padding: 20px;
+
+    .card__users{
+      position: absolute;
+      top: 10px;
+      right: 10px;
+    }
+
+    .card__content{
+      margin: 20px 0;
+      height: 3*$largest-font-size;
+      white-space: normal;
+    }
+
+    .card__tags{
+      width: 80%;
+    }
+  }
+
+  &.horizontal{
+    display: inline-flex;
+    width: 100%;
+    .card__content{
+      max-width: 70%;
+      p{
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        padding-right: $base-margin;
+        margin: 0;
+      }
+    }
+    .card-left{
+      padding: 0;
+      display: flex;
+      flex-direction: row;
+      align-items: baseline;
+    }
+
+    .card-right{
+      align-items: center;
+      padding: 0;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+    }
+
+    .card__tags{
+      width: 70%;
+    }
+  }
   &__tags{
     display: inline-flex;
     justify-content: flex-start;
     overflow: hidden;
-    width: 80%;
     flex-direction: row;
   }
   &__users{
-    position: absolute;
-    top: 10px;
-    right: 10px;
     display: inline-flex;
     flex-direction: row;
     .user{
@@ -40,6 +87,7 @@
     &__date{
       display: flex;
       justify-content: center;
+      align-items: center;
     }
     &__message{
       display: flex;
@@ -53,14 +101,11 @@
     }
   }
   &__content{
-    margin: 20px 0;
     font-size: $small-font-size;
     color: $card-content;
     font-weight: 400;
     line-height: $largest-font-size;
-    height: 3*$largest-font-size;
     overflow: hidden;
-    white-space: normal;
     text-overflow: ellipsis;
   }
 }
