--- a/src/styles/component/CardList/_CardList.scss
+++ b/src/styles/component/CardList/_CardList.scss
@@ -1,8 +1,8 @@
 .card-list{
-  margin: 40px 0 0 20px;
+  margin: 0 0 0 20px;
   padding: 10px;
   &__header{
-    margin: 20px 0;
+    padding: 20px 0;
     display: flex;
     width: 100%;
     justify-content: space-between;
