--- a/src/styles/component/CardList/_CardList.scss
+++ b/src/styles/component/CardList/_CardList.scss
@@ -31,6 +31,11 @@
       .plus, .dots{
         padding: 0 5px;
         cursor: pointer;
+        &:hover{
+          background: $topmenu-text;
+          color: white;
+          border-radius: 5px;
+        }
       }
     }
   }
