--- a/src/styles/component/SideMenu/_SideMenu.scss
+++ b/src/styles/component/SideMenu/_SideMenu.scss
@@ -3,7 +3,10 @@
   max-width: 220px;
   background-color: $sidebar-bg;
   flex: 1;
+  display: flex;
+  flex-direction: column;
   &__user{
+    margin: 0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -21,6 +24,7 @@
     }
   }
   &__links{
+    margin: 0;
     display: flex;
     flex-direction: column;
     a{
@@ -43,6 +47,19 @@
         padding: 0.25*$base-margin;
         padding-left: 0;
       }
+    }
+  }
+  &__logout{
+    text-align: center;
+    margin-top: auto;
+    margin-bottom: 0.5*$base-margin;
+    width: 100%;
+    button{
+      padding: 6px $base-margin;
+      border: none;
+      border-radius: 0;
+      color: $card-text;
+      background: $user-bg;
     }
   }
 }
