--- a/src/styles/routes/ProjectDetail/_ProjectDetail.scss
+++ b/src/styles/routes/ProjectDetail/_ProjectDetail.scss
@@ -17,9 +17,28 @@
         flex-grow: 0.1;
       }
     }
+    .new-card-list {
+      padding: 10px;
+      margin-right: 20px;
+    }
+
+    .card-list {
+      margin-right: 20px;
+      .no_task {
+        padding: $base-margin 0;
+      }
+    }
   }
 
   &__vertical{
+    overflow: scroll;
+
+    .new-card-list {
+      .add-list-btn {
+        margin-right: 20px;
+      }
+    }
+
     .card-list{
       min-width: 280px;
       padding: 0;
@@ -31,6 +50,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  overflow: hidden;
   background-color: $mainpage-bg;
   .container-fluid{
     padding-right: 0;
