--- a/src/styles/component/User/_User.scss
+++ b/src/styles/component/User/_User.scss
@@ -31,6 +31,7 @@
       margin-left: 0.25*$base-margin;
       display: inline-flex;
       margin-bottom: 0;
+      text-transform: capitalize;
       &:first-child{
         font-size: 0.9*$small-font-size;
         font-weight: 700;
@@ -50,6 +51,7 @@
     margin-left: 10px;
     margin-bottom: 0.5*$base-margin;
     p{
+      text-transform: capitalize;
       margin: 0;
       &:first-child{
         font-size: $small-font-size;
